cmake_minimum_required(VERSION 3.17)
project(cub3D C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "-Wall -Werror -Wextra")


include_directories(.)
include_directories(libft)
include_directories(minilibx-linux)
include_directories(gnl)

add_executable(cub3D
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd_back.c
        libft/ft_lstadd_front.c
        libft/ft_lstclear.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlast.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstsize.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_strchr.c
        libft/ft_strdup.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line_utils.c
        libft/get_next_line.c
        libft/libft.h
        minilibx-linux/test/main.c
        minilibx-linux/test/new_win.c
        minilibx-linux/mlx.h
        minilibx-linux/mlx_clear_window.c
        minilibx-linux/mlx_destroy_display.c
        minilibx-linux/mlx_destroy_image.c
        minilibx-linux/mlx_destroy_window.c
        minilibx-linux/mlx_expose_hook.c
        minilibx-linux/mlx_ext_randr.c
        minilibx-linux/mlx_flush_event.c
        minilibx-linux/mlx_get_color_value.c
        minilibx-linux/mlx_get_data_addr.c
        minilibx-linux/mlx_hook.c
        minilibx-linux/mlx_init.c
        minilibx-linux/mlx_int.h
        minilibx-linux/mlx_int_anti_resize_win.c
        minilibx-linux/mlx_int_do_nothing.c
        minilibx-linux/mlx_int_get_visual.c
        minilibx-linux/mlx_int_param_event.c
        minilibx-linux/mlx_int_set_win_event_mask.c
        minilibx-linux/mlx_int_str_to_wordtab.c
        minilibx-linux/mlx_int_wait_first_expose.c
        minilibx-linux/mlx_key_hook.c
        minilibx-linux/mlx_lib_xpm.c
        minilibx-linux/mlx_loop.c
        minilibx-linux/mlx_loop_hook.c
        minilibx-linux/mlx_mouse.c
        minilibx-linux/mlx_mouse_hook.c
        minilibx-linux/mlx_new_image.c
        minilibx-linux/mlx_new_window.c
        minilibx-linux/mlx_pixel_put.c
        minilibx-linux/mlx_put_image_to_window.c
        minilibx-linux/mlx_rgb.c
        minilibx-linux/mlx_screen_size.c
        minilibx-linux/mlx_set_font.c
        minilibx-linux/mlx_string_put.c
        minilibx-linux/mlx_xpm.c
        gnl/get_next_line.c
        gnl/get_next_line.h
        gnl/get_next_line_utils.c
        srcs/ceiling_floor.c
        srcs/cub3dmain.c
        srcs/keyboard.c
        srcs/sprite.c
        srcs/screenshot_bmp.c
        srcs/texture_wall.c
        srcs/parse_cub.c
        srcs/pm_resolution.c
        srcs/pm_texture.c
        srcs/pm_rgb_color.c
        cub3d.h)
